--- a/package.json
+++ b/package.json
@@ -8,49 +8,44 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
-    "vue": "vue-cli-service"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@capacitor/app": "1.1.0",
-    "@capacitor/camera": "^1.2.4",
-    "@capacitor/core": "3.4.0",
-    "@capacitor/filesystem": "^1.1.0",
-    "@capacitor/haptics": "1.1.4",
-    "@capacitor/keyboard": "1.2.1",
-    "@capacitor/status-bar": "1.0.7",
-    "@capacitor/storage": "^1.2.4",
-    "@ionic/pwa-elements": "^3.1.1",
-    "@ionic/vue": "^6.0.0",
-    "@ionic/vue-router": "^6.0.0",
+    "@capacitor/app": "1.0.5",
+    "@capacitor/camera": "^1.1.2",
+    "@capacitor/core": "3.2.5",
+    "@capacitor/device": "^1.1.2",
+    "@capacitor/filesystem": "^1.0.5",
+    "@capacitor/haptics": "1.1.2",
+    "@capacitor/keyboard": "1.1.2",
+    "@capacitor/status-bar": "1.0.5",
+    "@capacitor/storage": "^1.2.2",
+    "@ionic/vue": "^5.4.0",
+    "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
-    "html-webpack-plugin": "^5.5.0",
     "register-service-worker": "^1.7.1",
-    "vue": "^3.2.29",
-    "vue-router": "^4.0.12"
+    "vue": "^3.2.1",
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
-    "@capacitor/cli": "3.4.0",
-    "@types/jest": "^27.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
-    "@vue/cli-plugin-babel": "~5.0.0-rc.1",
-    "@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.1",
-    "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
-    "@vue/cli-plugin-pwa": "~4.5.0",
-    "@vue/cli-plugin-router": "~5.0.0-rc.1",
-    "@vue/cli-plugin-typescript": "~5.0.0-rc.1",
-    "@vue/cli-plugin-unit-jest": "~5.0.0-rc.1",
-    "@vue/cli-service": "~5.0.0-rc.1",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "@vue/test-utils": "^2.0.0-rc.16",
-    "@vue/vue3-jest": "^27.0.0-alpha.3",
-    "babel-jest": "^27.3.1",
-    "cypress": "^8.7.0",
-    "eslint": "^8.4.1",
-    "eslint-plugin-vue": "^8.2.0",
-    "jest": "^27.3.1",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.3.5"
+    "@capacitor/cli": "3.2.5",
+    "@types/jest": "^24.0.19",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-pwa": "^4.5.14",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-typescript": "~4.5.0",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0-0",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/test-utils": "^2.0.0-0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0-0",
+    "typescript": "^4.3.5",
+    "vue-jest": "^5.0.0-0"
   }
 }
